data/derived/sp14/progs/unify/prog3110.ml.out
Characters 31-32:
  wwhile (f f b,b);;
            ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
